--- a/.aliasesrc
+++ b/.aliasesrc
@@ -16,7 +16,7 @@ alias vol="alsamixer"
 alias ytdl="youtube-dl --extract-audio --audio-format mp3"
 alias wttr="curl wttr.in/sofia"
 alias ga="git add -A"
-alias gc="git commit -m"
+alias gc="git commit"
 alias gp="git push"
 alias and-mount="jmtpfs"
 alias and-unmount="fusermount -u"
