Add machine level customizations zshrc

--- a/cursor_settings.json
+++ b/cursor_settings.json
@@ -73,7 +73,6 @@
 	"godotTools.editorPath.godot3": "/System/Volumes/Data/Applications/Godot.app/Contents/MacOS/Godot",
 	"godotTools.editorPath.godot4": "/System/Volumes/Data/Applications/Godot.app/Contents/MacOS/Godot",
 	"git.openRepositoryInParentFolders": "never",
-	"git.autofetch": true,
 	"editor.tabSize": 2,
 	"editor.formatOnPaste": true,
 	"editor.formatOnSave": true,
@@ -81,7 +80,7 @@
 	"workbench.iconTheme": "vscode-jetbrains-icon-theme-2023-dark",
 	"python.defaultInterpreterPath": "/Users/antoniomindov/miniconda3/envs/openai-playground/bin/python",
 	"vim.sneak": true,
-	"window.title": "${rootNameShort}${separator}${activeEditorShort}",
+	"window.title": "${rootNameShort}",
 	"mypy.dmypyExecutable": "/Users/antoniomindov/miniconda3/envs/gAIa/bin/dmypy",
 	"editor.fontLigatures": true,
 	"editor.semanticHighlighting.enabled": true,
@@ -214,4 +213,8 @@
 		"source.fixAll.ts": "always",
 		"source.organizeImports": "always",
 	},
+	"github-actions.use-enterprise": true,
+	"go.lintTool": "golangci-lint-v2",
+	"clangd.path": "/Users/antoniomindov/Library/Application Support/Cursor/User/globalStorage/llvm-vs-code-extensions.vscode-clangd/install/20.1.0/clangd_20.1.0/bin/clangd",
+	"editor.inlayHints.enabled": "off",
 }
