--- a/cursor_settings.json
+++ b/cursor_settings.json
@@ -66,7 +66,7 @@
 		"<C-s>": false,
 		"<C-n>": false,
 		"<C-p>": false,
-		"<C-w>": false
+		"<C-w>": true
 	},
 	"javascript.updateImportsOnFileMove.enabled": "always",
 	"editor.tabCompletion": "on",
