--- a/.chezmoiignore
+++ b/.chezmoiignore
@@ -1,15 +1,4 @@
 README.md
-{{- if ne .chezmoi.os "linux" }}
-.i3
-i3lock-fancy-multimonitor
-polybar
-.config/compton.conf
-.config/xfce4/
-.fonts/
-.oh-my-zsh/themes/
-.tmux.conf
-.Xresources
-.local
-{{- end }}
 cursor_settings.json
 cursor_keybindings.json
+Brewfile
