iterm small change

--- a/iterm2/com.googlecode.iterm2.plist
+++ b/iterm2/com.googlecode.iterm2.plist
@@ -2280,7 +2280,7 @@
 			<key>Custom Tab Title</key>
 			<string></string>
 			<key>Custom Window Title</key>
-			<string>The Matrixr</string>
+			<string>The Matrix</string>
 			<key>Default Bookmark</key>
 			<string>No</string>
 			<key>Description</key>
